--- a/package.json
+++ b/package.json
@@ -12,29 +12,42 @@
   "dependencies": {
     "@dotlottie/react-player": "^1.6.12",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/button": "2.0.26",
+    "@nextui-org/code": "2.0.24",
+    "@nextui-org/input": "2.1.16",
+    "@nextui-org/kbd": "2.0.25",
+    "@nextui-org/link": "2.0.26",
+    "@nextui-org/navbar": "2.0.27",
+    "@nextui-org/snippet": "2.0.30",
+    "@nextui-org/switch": "2.0.25",
+    "@nextui-org/system": "2.0.15",
+    "@nextui-org/theme": "2.1.17",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "intl-messageformat": "^10.5.0",
     "firebase": "^10.5.2",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^10.18.0",
     "lodash": "^4.17.21",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.292.0",
     "next": "^14.0.2",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "tailwind-merge": "^2.0.0",
+    "postcss": "8.4.31",
+    "autoprefixer": "^10.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -42,10 +55,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
-    "postcss": "^8",
     "prisma": "^5.6.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
