--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
+    "react-resizable-panels": "^1.0.9",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
